# airpress

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  tests.py
airpress/: LICENSE  __init__.py  compressor.py  crypto.py  crypto2.py  factories.py
tests/: conftest.py  test_adding_assets.py  test_asset_manipulation.py  test_compression.py  test_container_protocol.py  test_factorries.py  test_initialization.py  test_manifest.py  test_protocols.py  test_signature.py
tests/credentials/: unprotected_dummy_cert.pem  unprotected_dummy_key.pem
