[tool.poetry]
name = "airpress"
version = "1.0.3"
description = "A frustration-free compression tool for PKPass archives."
keywords = ["library", "apple-wallet", "pkpass"]
authors = ["Stan Reduta <stanislaw.reduta@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/captain-fox/airpress"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Operating System :: OS Independent'
]

packages = [
    { include = "airpress" }
]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
bump2version = "^1.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

